force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/Respuestas_a_la_preguntas_de_encuestas__c.object-meta.xml
<CustomObject>
    <label>Respuestas a la preguntas de encuestas</label>
    <nameField>
        <label>Respuesta a la pregunta de la encuesta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Respuestas a la preguntas de encuestas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>