force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/Contacto__c.field-meta.xml
<CustomField>
    <fullName>Contacto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Respuestas a la preguntas de encuestas</relationshipLabel>
    <relationshipName>Respuestas_a_la_preguntas_de_encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>