force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Encuesta__c</fullName>
    <formula>Preguntas_de_Encuesta__r.Version_de_Encuesta__r.Name</formula>
    <label>Encuesta</label>
    <type>Text</type>
</CustomField>