force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_KAM__c.field-meta.xml
<CustomField>
    <fullName>FS_KAM__c</fullName>
    <formula>Contacto__r.FS_KAM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KAM</label>
    <type>Text</type>
</CustomField>