force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_PMCore__c.field-meta.xml
<CustomField>
    <fullName>FS_PMCore__c</fullName>
    <formula>Contacto__r.FS_PMCore__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Core</label>
    <type>Text</type>
</CustomField>