force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_PMOmnia__c.field-meta.xml
<CustomField>
    <fullName>FS_PMOmnia__c</fullName>
    <formula>Contacto__r.FS_PMOmnia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM Omnia</label>
    <type>Text</type>
</CustomField>