force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_PMPSSecundario__c.field-meta.xml
<CustomField>
    <fullName>FS_PMPSSecundario__c</fullName>
    <formula>Contacto__r.FS_PMPSSecundario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM-PS Secundario</label>
    <type>Text</type>
</CustomField>