force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_Producto2__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto2__c</fullName>
    <formula>Contacto__r.FS_Producto_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto 2</label>
    <type>Text</type>
</CustomField>