force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_Producto3__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto3__c</fullName>
    <formula>Contacto__r.FS_Producto_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto 3</label>
    <type>Text</type>
</CustomField>