force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_Producto4__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto4__c</fullName>
    <formula>Contacto__r.FS_Producto_4__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Producto 4</label>
    <type>Text</type>
</CustomField>