force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_Producto_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Producto_1__c</fullName>
    <formula>Contacto__r.FS_Producto_1__c</formula>
    <label>Producto 1</label>
    <type>Text</type>
</CustomField>