force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/FS_Version_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>FS_Version_Encuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Encuesta</label>
    <referenceTo>SurveyVersion</referenceTo>
    <relationshipLabel>Respuestas a la preguntas de encuestas</relationshipLabel>
    <relationshipName>Respuestas_a_la_preguntas_de_encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>