force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/Nombre_de_la_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_la_Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de la Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Respuestas a la preguntas de encuestas</relationshipLabel>
    <relationshipName>Respuestas_a_la_preguntas_de_encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>