force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/Pregunta__c.field-meta.xml
<CustomField>
    <fullName>Pregunta__c</fullName>
    <formula>FS_Preguntas_Encuesta__r.Name</formula>
    <label>Pregunta</label>
    <type>Text</type>
</CustomField>