force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/Preguntas_de_Encuesta__c.field-meta.xml
<CustomField>
    <fullName>Preguntas_de_Encuesta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preguntas de Encuesta</label>
    <referenceTo>Preguntas_de_Encuesta__c</referenceTo>
    <relationshipLabel>Respuestas a la preguntas de encuestas</relationshipLabel>
    <relationshipName>Respuestas_a_la_preguntas_de_encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>