force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/Respuesta__c.field-meta.xml
<CustomField>
    <fullName>Respuesta__c</fullName>
    <label>Respuesta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>