force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/fields/Respuesta_Pregunta__c.field-meta.xml
<CustomField>
    <fullName>Respuesta_Pregunta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Respuesta Pregunta</label>
    <referenceTo>SurveyResponse</referenceTo>
    <relationshipLabel>Respuestas a la preguntas de encuestas</relationshipLabel>
    <relationshipName>Respuestas_a_la_preguntas_de_encuestas</relationshipName>
    <type>Lookup</type>
</CustomField>