force-app/main/default/objects/Respuestas_a_la_preguntas_de_encuestas__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>NAME</columns>
    <columns>Encuesta__c</columns>
    <columns>Pregunta__c</columns>
    <columns>Respuesta_Pregunta__c</columns>
    <columns>Respuesta__c</columns>
    <columns>Contacto__c</columns>
    <columns>FS_Producto_1__c</columns>
    <columns>FS_Producto2__c</columns>
    <columns>FS_Producto3__c</columns>
    <columns>FS_Producto4__c</columns>
    <columns>FS_PMCore__c</columns>
    <columns>FS_PMOmnia__c</columns>
    <columns>FS_PMPSPrincipal__c</columns>
    <columns>FS_PMPSSecundario__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Respuesta_Pregunta__c</field>
        <operation>contains</operation>
        <value>Blandón</value>
    </filters>
    <label>Today</label>
</ListView>